--- a/PizzaDaMamma.Orders/wwwroot/index.html
+++ b/PizzaDaMamma.Orders/wwwroot/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title>Pizza da mamma - Заказы</title>
 
+    <link rel="icon" sizes="192x192" href="/img/favicon.png">
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="/img/favicon.png" type="image/png">
+
     <!-- App css-->
     <link type="text/css" rel="stylesheet" href="/css/site.css" />
 </head>
