"Приляпан" шаблон к данным

--- a/PizzaDaMamma.Orders/wwwroot/index.html
+++ b/PizzaDaMamma.Orders/wwwroot/index.html
@@ -17,161 +17,7 @@
     </header>
 
     <div class="pdm-row">
-        <div class="pdm-col">
-            <div class="card-header">
-                Пицца "Прошутто с рукколой и томатами черри"
-            </div>
-            <div class="card-image">
-                <img src="img/menu/Прошутто с рукколой и томатами черри.webp" />
-            </div>
-            <div class="card-description">
-                Соус томатный, сыр моцарелла, прошутто, руккола, томаты черри, орегано
-            </div>
-            <table class="striped card-table-info" cellspacing="0" cellpadding="0">
-                <tbody>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Диаметр</td>
-                        <td class="card-table-info-td">35 см</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Вес</td>
-                        <td class="card-table-info-td">510±50 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td" colspan="2" style="text-align:center;font-weight:bold;font-style:italic;">Пищевая ценность продукта на 100 г:</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Энергетическая ценность</td>
-                        <td class="card-table-info-td">207,4 ккал</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Углеводы </td>
-                        <td class="card-table-info-td">28,6 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Белки </td>
-                        <td class="card-table-info-td">9 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Жиры</td>
-                        <td class="card-table-info-td">9,7 г</td>
-                    </tr>
-                </tbody>
-            </table>
-            <table class="card-table-footer" cellspacing="0" cellpadding="0">
-                <tbody>
-                    <tr class="card-table-footer-row">
-                        <td class="card-table-footer-td card-table-footer-price">550 р</td>
-                        <td class="card-table-footer-td card-table-footer-button">Выбрать</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-
-
-        <div class="pdm-col">
-            <div class="card-header">
-                Пицца "Пепперони с томатами и халапеньо"
-            </div>
-            <div class="card-image">
-                <img src="img/menu/Пепперони с томатами и халапеньо.webp" />
-            </div>
-            <div class="card-description">
-                Соус томатный, сыр моцарелла, пепперони острая, томаты, халапеньо, орегано
-            </div>
-            <table class="striped card-table-info" cellspacing="0" cellpadding="0">
-                <tbody>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Диаметр</td>
-                        <td class="card-table-info-td">35 см</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Вес</td>
-                        <td class="card-table-info-td">540±50 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td" colspan="2" style="text-align:center;font-weight:bold;font-style:italic;">Пищевая ценность продукта на 100 г:</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Энергетическая ценность</td>
-                        <td class="card-table-info-td">207,4 ккал</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Углеводы </td>
-                        <td class="card-table-info-td">31,6 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Белки </td>
-                        <td class="card-table-info-td">12 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Жиры</td>
-                        <td class="card-table-info-td">11,7 г</td>
-                    </tr>
-                </tbody>
-            </table>
-            <table class="card-table-footer" cellspacing="0" cellpadding="0">
-                <tbody>
-                    <tr class="card-table-footer-row">
-                        <td class="card-table-footer-td card-table-footer-price">550 р</td>
-                        <td class="card-table-footer-td card-table-footer-button">Выбрать</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-
-        <div class="pdm-col">
-            <div class="card-header">
-                Пицца "4-мяса"
-            </div>
-            <div class="card-image">
-                <img src="img/menu/4-мяса.webp" />
-            </div>
-            <div class="card-description">
-                Соус томатный, сыр моцарелла, салями, пепперони, прошутто, ветчина, маслины, орегано
-            </div>
-            <table class="striped card-table-info" cellspacing="0" cellpadding="0">
-                <tbody>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Диаметр</td>
-                        <td class="card-table-info-td">35 см</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Вес</td>
-                        <td class="card-table-info-td">570±50 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td" colspan="2" style="text-align:center;font-weight:bold;font-style:italic;">Пищевая ценность продукта на 100 г:</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Энергетическая ценность</td>
-                        <td class="card-table-info-td">283,2 ккал</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Углеводы </td>
-                        <td class="card-table-info-td">27,6 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Белки </td>
-                        <td class="card-table-info-td">10,9 г</td>
-                    </tr>
-                    <tr class="card-table-info-row">
-                        <td class="card-table-info-td">Жиры</td>
-                        <td class="card-table-info-td">13,5 г</td>
-                    </tr>
-                </tbody>
-            </table>
-            <table class="card-table-footer" cellspacing="0" cellpadding="0">
-                <tbody>
-                    <tr class="card-table-footer-row">
-                        <td class="card-table-footer-td card-table-footer-price">550 р</td>
-                        <td class="card-table-footer-td card-table-footer-button">Выбрать</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <!--here-->
     </div>
 
     <footer>
