Форма выбора ингридиентов

--- a/PizzaDaMamma.Orders/wwwroot/index.html
+++ b/PizzaDaMamma.Orders/wwwroot/index.html
@@ -20,8 +20,35 @@
         <!--here-->
     </div>
 
-    <footer>
+    <div id="pdm-pizza-select" class="pdm-modal">
+        <span class="pdm-modal-close" title="Close Modal">×</span>
+        <div class="pdm-modal-cotent" >
+            <h1 id="pdm-pizza-select-header">
+            </h1>
 
+            <div>
+                <img id="pdm-pizza-select-image" src="" />
+            </div>
+
+            <div>
+                <h2>Ингридиенты</h2>
+                <div id="pdm-pizza-select-ingridients">
+
+                </div>
+                <h2>Дополнительно</h2>
+                <div id="pdm-pizza-select-ingridients-add">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
     </footer>
+
+    <script src="/js/Index.js"></script>
+    <script>
+        //<!--data here-->
+    </script>
 </body>
 </html>
